# content-transfer-engine

./: .clangd  .dockerignore  .env  .gitignore  .gitmodules  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  DartConfiguration.tcl  LICENSE  Makefile  None  README.md  clean_cmake_artifacts.sh  compile_commands.json  env.sh  preset.sh
.claude/: settings.local.json
.claude/agents/: dockerfile-ci-expert.md
.devcontainer/: devcontainer.json
.github/workflows/: build-containers.yaml  build-containers.yml  build_and_push_docker_images.yml  main.yml
adapter/: CMakeLists.txt  Makefile  cae_config.cc  cae_config.h  cte_adapter.cc  cte_adapter.h  cte_config.h
adapter/filesystem/: CMakeLists.txt  Makefile  filesystem.h  filesystem_io_client.h  filesystem_mdm.h
adapter/mpiio/: CMakeLists.txt  mpiio_api.cc
adapter/nvidia_gds/: CMakeLists.txt
adapter/posix/: CMakeLists.txt  Makefile  posix_api.cc  posix_api.h  posix_fs_api.h
adapter/stdio/: CMakeLists.txt  stdio_api.cc  stdio_fs_api.h
adapter/vfd/: CMakeLists.txt  H5FDhermes.cc
ai-prompts/Core/: phase1-basic-io.md  phase11-tag.md  phase12-reorganize.md  phase13-distributed.md  phase2-fixes.md  phase3-putblob.md  phase5-adapter.md  phase6-singleton.md  phase9-stats.md
ai-prompts/Test/: phase1-distributed.md
ai-prompts/benchmark/: phase2-container.md
benchmark/: CMakeLists.txt  cte_config_ram.yaml  hermes_api_bench.cc  wrp_cte_bench.cc  wrp_cte_bench.sh
chimods/bdev/: CMakeLists.txt
chimods/bdev/include/chimaera/bdev/: bdev_client.h  bdev_runtime.h  bdev_tasks.h
chimods/bdev/include/chimaera/bdev/autogen/: bdev_methods.h
chimods/bdev/src/: bdev_runtime.cc
chimods/bdev/src/autogen/: bdev_lib_exec.cc
config/: cae_example.yaml  cte_config.yaml  cte_default.yaml  cte_example.yaml  hermes_server_default.yaml
core/: CMakeLists.txt  Makefile  chimaera_mod.yaml  wrp_cte-coreConfig.cmake  wrp_cte-coreConfig.cmake.in  wrp_cte_coreConfig.cmake  wrp_cte_coreConfig.cmake.in
core/include/chimaera/: wrp_cte
core/include/chimaera/core/: core_client.h  core_dpe.h  core_runtime.h  core_tasks.h
core/include/chimaera/core/autogen/: core_methods.h
core/include/wrp_cte/core/: content_transfer_engine.h  core_client.h  core_config.h  core_runtime.h  core_tasks.h
core/include/wrp_cte/core/autogen/: core_methods.h
core/src/: content_transfer_engine.cc  core_client.cc  core_config.cc  core_dpe.cc  core_runtime.cc  tag.cc
core/src/autogen/: core_lib_exec.cc
core/util/: launch_cte.cc
docker/: Dockerfile.build  build.Dockerfile  deploy.Dockerfile  docker-compose.yaml  docker.sh  local.Dockerfile  local.sh  redis_bench.Dockerfile  wrp_cte_bench.Dockerfile
docker/redis_bench/: docker-compose.yml
docker/wrp_cte_bench/: README.md  docker-compose.yml
docs/chimaera/: MODULE_DEVELOPMENT_GUIDE.md  deployment.md  module_test_guide.md
docs/cte/: cte.md
docs/jarvis/: package_dev_guide.md  resource_graph.md
hermes_adapters/: CMakeLists.txt  cte_config.h
hermes_adapters/filesystem/: CMakeLists.txt  filesystem.h  filesystem_io_client.h  filesystem_mdm.h
hermes_adapters/mapper/: abstract_mapper.h
hermes_adapters/nvidia_gds/: cufile_api.h
hermes_adapters/posix/: CMakeLists.txt  posix_api.cc  posix_fs_api.h
include/hermes/: config_server.h  config_server_default.h
include/hermes/dpe/: minimize_io_time.h
tasks/hermes_core/src/: hermes_core_runtime.cc
test/: Makefile
test/jarvis_hermes/jarvis_hermes/hermes_run/: pkg.py
test/jarvis_wrp_cte/jarvis_wrp_cte/wrp_adapters/: README.md  pkg.py
test/jarvis_wrp_cte/jarvis_wrp_cte/wrp_cte/: README.md  pkg.py
test/jarvis_wrp_cte/jarvis_wrp_cte/wrp_cte_bench/: pkg.py
test/jarvis_wrp_cte/pipelines/: cte_bench_example.yaml  example_env_vars.yaml  example_mpiio_adapter.yaml  example_multi_adapter.yaml  example_posix_adapter.yaml  ior.yaml  ior_base.yaml  ior_cte.yaml
test/jarvis_wrp_cte/wrp_cte/: pkg.py
test/unit/: CMakeLists.txt  CTestTestfile.cmake  Makefile  test_core_functionality.cc  test_core_functionality_simple.cc  test_core_minimal.cc  test_query.cc
test/unit/adapters/: CMakeLists.txt  CTestTestfile.cmake  Makefile
test/unit/adapters/posix/: CMakeLists.txt  CTestTestfile.cmake  Makefile  test_posix_adapter.cc
test/unit/benchmark/: .gitignore  QUICKSTART.md  README.md  chimaera_config.yaml  cte_config.yaml  docker-compose.yaml
test/unit/distributed/: README.md  chimaera_config.yaml  cte_config.yaml  docker-compose.yaml  run_tests.sh  wrp_config.yaml
wrapper/: CMakeLists.txt
wrapper/python/: CMakeLists.txt  core_bindings.cc  core_bindings.cpp  core_stub.pyi  py_hermes.cpp  test_compilation_bindings.py  test_python_bindings.py  test_query_bindings.py
